--- a/style.css
+++ b/style.css
@@ -152,4 +152,46 @@ button{
 /* Article Styling */
 .article{
     background-color: var(--main-color);
+    display: grid;
+    grid-template-columns: 2.5fr 1fr;
+    padding: 20px;
+}
+
+.projects{
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(275px, 1fr));
+    /* grid-template-rows: repeat(auto-fit, minmax(250px, 1fr)); */
+    gap: 15px;
+
+}
+.project-title{
+    padding: 5px;
+}
+
+.card{
+    height: 200px;
+    background-color: white;
+    padding: 20px;
+    border-radius: 2%;
+    display: flex;
+    flex-direction: column;
+    align-items: stretch;
+    justify-content: stretch;
+}
+.description{
+    color: grey;
+    flex:1;
+}
+.title{
+    font-weight: bold;
+}
+
+.card-icons{
+    height: 1.5em;
+}
+.card-controls{
+    display: flex;
+    gap: 1.5rem;
+    justify-content: flex-end;
+
 }
