--- a/style.css
+++ b/style.css
@@ -155,6 +155,7 @@ button{
     display: grid;
     grid-template-columns: 2.5fr 1fr;
     padding: 20px;
+    gap: 1em;
 }
 
 .projects{
@@ -164,7 +165,7 @@ button{
     gap: 15px;
 
 }
-.project-title{
+.article-title{
     padding: 5px;
 }
 
@@ -194,4 +195,40 @@ button{
     gap: 1.5rem;
     justify-content: flex-end;
 
+}
+
+/* Announcement Styling */
+
+.announcements{
+    background-color: white;
+    padding: 1em;
+    border-radius: 2%;
+    display: flex;
+    flex-direction: column;
+    /* gap: 1em; */
+
+}
+
+.border{
+    /* height: 2px;
+    background-color: var(--main-color); */
+    margin: 0;
+    padding: 0;
+}
+
+.announcements{
+    margin-bottom: 1em;
+}
+
+.announcement p {
+    border-bottom: 1px solid var(--main-color);
+    padding-bottom: 1rem;
+}
+.announcement{
+    margin-bottom: 1rem;
+}
+
+.announcement.final p{
+    border-bottom: 0px;
+    padding-bottom: 0rem;
 }
